updated library requirements

--- a/code/platformio.ini
+++ b/code/platformio.ini
@@ -14,3 +14,19 @@ board = nodemcuv2
 framework = arduino
 upload_protocol = espota
 upload_port = 192.168.1.32
+
+lib_deps =
+  # Using a library name
+  Adafruit TSL2561
+
+  # ... or using library Id
+  34
+
+  # ... or depend on a specific version
+  Adafruit TSL2561@1.0.3
+
+  # Semantic Versioning Rules
+  # http://docs.platformio.org/page/userguide/lib/cmd_install.html#description
+  Adafruit TSL2561@^1.0.3
+  Adafruit TSL2561@~1.0.3
+  Adafruit TSL2561@>=1.0.3
