--- a/code/platformio.ini
+++ b/code/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 upload_protocol = espota
 upload_port = 192.168.1.32
 
-lib_deps = Adafruit TSL2561, Adafruit Unified Sensor
+lib_deps = Adafruit TSL2561, Adafruit Unified Sensor, Wire
